<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="OP40_GVL" Id="{82c628f9-a6e2-4d71-ac5f-9341d8bf0d56}">
    <Declaration><![CDATA[VAR_GLOBAL
	
//GENERAL
OP40_Auto:					BOOL;
OP40_HomeRunning:			BOOL;
OP40_ErrorActive:			BOOL;
OP40_Home_PB:				BOOL;
OP40_Work_PB:				BOOL;
OP40_ManualSafetyBypass:	BOOL;
OP40_LightCurtainBypass:	BOOL;
OP40_OperationCompleted:	BOOL;
OP40_LampCheck:				BOOL;
OP40_MachineLamp:			BOOL;
OP40_ComponentOk:			BOOL;
OP40_ComponentNok:			BOOL;
OP40_RepeatBit:				BOOL;
OP40_HomingResetBit:		BOOL;
OP40_ControlledByRobo:		BOOL;
OP40_Any_Bypass:			BOOL;
OP40_ManualModeStatus:		INT;
OP40_ManualModeWord:		INT;
OP40_AutoRunning:			BOOL;
OP40_StepRunning:			BOOL;
OP40_StartEnable:   		BOOL;
OP40_Machine_Stop: 			BOOL;
OP40_AutoSeq:				INT;
OP40_LH_AutoSeq: 			INT;
OP40_RH_AutoSeq: 			INT;
OP40_Homing_Seq:			INT;
OP40_HomeConditionOK:   	BOOL;
OP40_Safety_OK:				BOOL;
OP40_Mode_Ack:				BOOL;
OP40_Temp_hmeOK:			BOOL;
OP40_Stop_Request: BOOL;

//Automatic_Run:				BOOL;

OP40_Prev_Stat_Operation_Completed: BOOL;
OP40_Prev_Comp_Status: INT;
OP40_Prev_LH_COMP_OK:BOOL;
OP40_Prev_LH_COMP_NOK:BOOL;
OP40_Prev_RH_COMP_OK:BOOL;
OP40_Prev_RH_COMP_NOK:BOOL;
OP40_LH_Operation_Completed:BOOL;
OP40_RH_Operation_Completed:BOOL;

//ModeSelection Outputs
//OP130_AutoSelected:		    BOOL;
OP40_ManualSelected:		BOOL;
OP40_StepSelected:			BOOL;
OP40_AutoSelected:		    BOOL;


//HMI Tags(From HMI)
OP40_HMI_AutoMode:						BOOL;
OP40_HMI_ManualMOde:					BOOL;
OP40_HMI_StepMode:						BOOL;
OP40_HMI_CycleStart:					BOOL;
OP40_HMI_Cycle_Start:					BOOL;
OP40_HMI_Reset:						    BOOL;
OP40_HMI_Homing:						BOOL;
SR40_Vert_Servo_Max_Lim:				BOOL;



//Servo
SR40_Vert_servo : FB_Axis;
SR40_Vert_servo_ctrl:Servo_Control;
SR40_Vert_servo_not_Home: BOOL;
SR40_Vert_servo_status:stManualModeAxis;
SR40_Vert_servo_Axis :AXIS_REF;

//MANUAL	
	OP40_man_cyl_no 				: INT;
	
//AUTO	

	OP40_AUTO_STP_NO				: INT;


// SERVO VARIABLE
	OP40_VERT_SERVO_STRT			: BOOL;				// SERVO MOVE TO TARGET POSITION
	OP40_SERVO_POS_DONE				: BOOL;				// SERVO POSITION REACHED
	OP40_SERVO_ON_SFE_WRK			: BOOL;				// SERVO ACTUAL POSITION = SERVO SAFE POSITION
	OP40_SERVO_ON_WRK_1				: BOOL;				// SERVO ACTUAL POSITION = SERVO WORK POSITION
	OP40_SERVO_ON_WRK_2				: BOOL;	
    OP40_SERVO_ON_HOME				: BOOL;				// SERVO ACTUAL POSITION = SERVO HOME POSITION		  
	OP40_VERT_SERVO_POSITION		: REAL;				// SERVO ACTUAL POSITION

//LVDT

OP40_LH AT %I*:  DINT;
OP40_RH AT %I*:  DINT;
OP60_LH AT %I*:  DINT;
OP60_RH AT %I*:  DINT;
OP80_LH AT %I*:  DINT;
OP80_RH AT %I*:  DINT;



END_VAR

VAR_GLOBAL PERSISTENT
//LVDT 
	OP40_SET_LVDT_VALUE				:LREAL;	           // FROM HMI OR RECIPE
	OP40_LVDT_TOLERANCE 			:LREAL;			   // FROM HMI OR RECIPE
	OP40_LH_LVDT_VALUE				:REAL;			   // FROM LVDT
	OP40_RH_LVDT_VALUE				:REAL;
	
	OP40_Cycle_Time : UDINT;
//Error
	OP40_ErrorWord_0: DINT;
	OP40_ErrorWord_1: DINT;
	OP40_ErrorWord_2: DINT;	
// MANUAL
	OP40_STN_ENABLE					: BOOL;				// FROM MASTER CONTROL BLOCK 
	OP40_STN_RUNNING				: BOOL;
// AUTO
	OP40_BYPASS						: BOOL;				// OP40 ON-BYPASS
	OP40_LH_LVDT_OK					: BOOL;				// TO MASTER CONTROL BLOCK LH OK BIT
	OP40_LH_LVDT_NOK				: BOOL;				// TO MASTER CONTROL BLOCK LH NOK BIT
	OP40_RH_LVDT_OK					: BOOL;				// TO MASTER CONTROL BLOCK RH OK BIT
	OP40_RH_LVDT_NOK				: BOOL;				// TO MASTER CONTROL BLOCK RH NOK BIT		  
	OP40_DLY_AFT_SFE_WRK			: INT  := 200;		// AUTO DELAY TIMER AFTER SERVO REACH WORK
	
	OP40_HMI_LH_LVDT_VALUE				: REAL;
	OP40_HMI_RH_LVDT_VALUE				: REAL;

//SERVO	
	OP40_VERT_SERVO_HME_POS			: REAL :=0;             // SERVO HOME POSITION FROM HMI
	OP40_VERT_SERVO_SFE_WRK_POS		: REAL :=0;				// SERVO SAFE WORK POSITION FROM RECEIPE
	OP40_VERT_SERVO_WRK_POS_1		: REAL :=35;
    OP40_VERT_SERVO_WRK_POS_2		: REAL :=40;		// SERVO WORK POSITION FROM RECEIPE	
	OP40_VERT_SERVO_TARGET			: REAL;				// SERVO AUTO TARGET POSITION	

//Setting Parameters
    OP40_HMI_Servo_Speed   : REAL;
    OP40_HMI_Servo_Speed_Offset : REAL;
	OP40_HMI_Servo_Pos_Offset   : REAL;	
    OP40_HMI_Low_Limit		 : REAL;
    OP40_HMI_High_Limit		 : REAL;
	OP40_HMI_Safe_Home		 : REAL;
	OP40_HMI_Safe_Work		 : REAL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>