<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP40_ERROR" Id="{071f0dd8-08c3-4745-aefc-5e2d43cdc97e}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP40_ERROR
VAR
	OP40_StErr_1: TON;
	OP40_Step_Err_2: TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
// Set ERROR ACTIVE
IF ((OP40_GVL.OP40_ErrorWord_0<>0) OR (OP40_GVL.OP40_ErrorWord_1<>0) OR (OP40_GVL.OP40_ErrorWord_2<>0)) THEN
	OP40_GVL.OP40_ErrorActive:= TRUE;
	END_IF

//Reset ErrorActive
IF (OP40_GVL.OP40_HMI_Reset) THEN 
	OP40_GVL.OP40_ErrorActive:= FALSE;
	OP40_GVL.OP40_ErrorWord_0:= 0;
	OP40_GVL.OP40_ErrorWord_1:= 0;
	OP40_GVL.OP40_ErrorWord_2:= 0;

END_IF

// Auto Seq Step Error
//Servo not reaching work position
OP40_StErr_1(IN:=(OP40_AutoSeq=80) , PT:=T#1S , Q=> , ET=> );
IF (OP40_AutoSeq=80 AND NOT OP40_GVL.OP40_SERVO_ON_WRK_1 AND OP40_StErr_1.Q) THEN
	OP40_GVL.OP40_ErrorWord_0.0:=TRUE;
END_IF

// Servo Not Reached home position or safe-work position
OP40_Step_Err_2(IN:=OP40_AutoSeq=120 , PT:=T#1S , Q=> , ET=> );
IF (OP40_AutoSeq=120 AND NOT SR40_Vert_servo_ctrl.Axis_In_Home AND OP40_Step_Err_2.Q) THEN
	OP40_GVL.OP40_ErrorWord_0.1:=TRUE;
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="OP40_ERROR">
      <LineId Id="3" Count="26" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>