<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP40_Initialization_Seq" Id="{b6855d55-efdc-4f82-b38f-1db8e6c9adbe}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP40_Initialization_Seq
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF (SR40_Vert_servo_ctrl.Axis_In_Home)THEN
    OP40_Temp_hmeOK:=TRUE;
	OP40_HomeRunning:=FALSE;
	OP40_Homing_Seq:=0;
ELSE
	OP40_Temp_hmeOK:=FALSE;	
END_IF

CASE OP40_Homing_Seq OF
	0: IF (OP40_AutoSelected AND NOT OP40_HomeRunning AND NOT OP40_ErrorActive AND NOT  OP40_AutoRunning AND NOT OP40_StepRunning AND NOT OP40_Temp_hmeOK ) THEN
		OP40_HomeRunning:=TRUE;
		OP40_Homing_Seq:=10;	
	   END_IF
	10:IF (OP40_HomeRunning AND OP40_HMI_Homing)THEN 
		IF (SR40_Vert_servo_ctrl.Axis_In_Home) THEN 
			OP40_Homing_Seq:=20;
			SR40_Vert_servo_ctrl.Axis_Home_Cmd:=FALSE;
		ELSE
			SR40_Vert_servo_ctrl.Position:=0;
			SR40_Vert_servo_ctrl.Axis_Home_Cmd:=TRUE;
	    END_IF
	   END_IF		
	20:	OP40_Homing_Seq:=0;
		OP40_HomeRunning:=FALSE;
	
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="OP40_Initialization_Seq">
      <LineId Id="3" Count="24" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>